Very minor performance improvements